syntax = "proto3";

package NAlice.NScenarios;

import "google/protobuf/any.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";

import "mapreduce/yt/interface/protos/extension.proto";

message TDirectiveSample {
    // YT serialization does not support recursive schema
    // option (NYT.default_field_flags) = SERIALIZATION_YT;
    reserved 14, 15, 16, 17, 18, 55, 76;
    reserved "OnboardingStartingCriticalUpdateDirectiveSample"; reserved 122;
    reserved "RemindersCreateDirectiveSample"; reserved 142;

    // EndpointId can be filled with id of destination in device's environment.
    // It can hold
    // - id of local device (the device itself)
    // - empty (considered as local device)
    // - id of remote device in the environment
    google.protobuf.StringValue EndpointId = 154 [json_name = "endpoint_id", (NYT.column_name) = "endpoint_id"];
    oneof DirectiveSample {
        TCallbackDirectiveSample CallbackDirectiveSample = 1 [json_name = "callback_DirectiveSample", (NYT.column_name) = "callback_DirectiveSample"];
        TOpenDialogDirectiveSample OpenDialogDirectiveSample = 2 [json_name = "open_dialog_DirectiveSample", (NYT.column_name) = "open_dialog_DirectiveSample"];
        TUpdateDialogInfoDirectiveSample UpdateDialogInfoDirectiveSample = 3 [json_name = "update_dialog_info_DirectiveSample", (NYT.column_name) = "update_dialog_info_DirectiveSample"];
        TOpenUriDirectiveSample OpenUriDirectiveSample = 4 [json_name = "open_uri_DirectiveSample", (NYT.column_name) = "open_uri_DirectiveSample"];
        TEndDialogSessionDirectiveSample EndDialogSessionDirectiveSample = 5 [json_name = "end_dialog_session_DirectiveSample", (NYT.column_name) = "end_dialog_session_DirectiveSample"];
        TTypeTextDirectiveSample TypeTextDirectiveSample = 6 [json_name = "type_text_DirectiveSample", (NYT.column_name) = "type_text_DirectiveSample"];
        TStopBluetoothDirectiveSample StopBluetoothDirective = 50 [json_name = "stop_bluetooth_directive", (NYT.column_name) = "stop_bluetooth_directive"];
        TStartBluetoothDirectiveSample StartBluetoothDirective = 51 [json_name = "start_bluetooth_directive", (NYT.column_name) = "start_bluetooth_directive"];
        TReadPageDirectiveSample ReadPageDirective = 52 [json_name = "read_page_directive", (NYT.column_name) = "read_page_directive"];
        TReadPagePauseDirectiveSample ReadPagePauseDirective = 53 [json_name = "read_page_pause_directive", (NYT.column_name) = "read_page_pause_directive"];
        TReadPageContinueDirectiveSample ReadPageContinueDirective = 54 [json_name = "read_page_continue_directive", (NYT.column_name) = "read_page_continue_directive"];
    }
}

message TCallbackDirectiveSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Name = 1 [json_name = "name", (NYT.column_name) = "name"];
    bool IgnoreAnswer = 2 [json_name = "ignore_answer", (NYT.column_name) = "ignore_answer", deprecated = true];
    google.protobuf.Struct Payload = 3 [json_name = "payload", (NYT.column_name) = "payload", (NYT.flags) = SERIALIZATION_PROTOBUF];
    string MultiroomSessionId = 4 [json_name = "multiroom_session_id", (NYT.column_name) = "multiroom_session_id"];
    bool IsLedSilent = 5 [json_name = "is_led_silent", (NYT.column_name) = "is_led_silent"];
}

message TOpenDialogDirectiveSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Name = 1 [json_name = "name", (NYT.column_name) = "name"];
    string DialogId = 2 [json_name = "dialog_id", (NYT.column_name) = "dialog_id"];
    repeated TDirectiveSample DirectiveSamples = 3 [json_name = "DirectiveSamples", (NYT.column_name) = "DirectiveSamples"];
}

message TUpdateDialogInfoDirectiveSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Name = 1 [json_name = "name", (NYT.column_name) = "name"];

    message TStyleSample {
        option (NYT.default_field_flags) = SERIALIZATION_YT;

        string SuggestBorderColor = 1 [json_name = "suggest_border_color", (NYT.column_name) = "suggest_border_color"];
        string UserBubbleFillColor = 2 [json_name = "user_bubble_fill_color", (NYT.column_name) = "user_bubble_fill_color"];
        string SuggestTextColor = 3 [json_name = "suggest_text_color", (NYT.column_name) = "suggest_text_color"];
        string SuggestFillColor = 4 [json_name = "suggest_fill_color", (NYT.column_name) = "suggest_fill_color"];
        string UserBubbleTextColor = 5 [json_name = "user_bubble_text_color", (NYT.column_name) = "user_bubble_text_color"];
        string SkillActionsTextColor = 6 [json_name = "skill_actions_text_color", (NYT.column_name) = "skill_actions_text_color"];
        string SkillBubbleFillColor = 7 [json_name = "skill_bubble_fill_color", (NYT.column_name) = "skill_bubble_fill_color"];
        string SkillBubbleTextColor = 8 [json_name = "skill_bubble_text_color", (NYT.column_name) = "skill_bubble_text_color"];
        string OknyxLogo = 9 [json_name = "oknyx_logo", (NYT.column_name) = "oknyx_logo"];
        repeated string OknyxErrorColors = 10 [json_name = "oknyx_error_colors", (NYT.column_name) = "oknyx_error_colors"];
        repeated string OknyxNormalColors = 11 [json_name = "oknyx_normal_colors", (NYT.column_name) = "oknyx_normal_colors"];
    }
    TStyleSample Style = 2 [json_name = "style", (NYT.column_name) = "style"];
    string Title = 3 [json_name = "title", (NYT.column_name) = "title"];
    string Url = 4 [json_name = "url", (NYT.column_name) = "url"];
    string ImageUrl = 6 [json_name = "image_url", (NYT.column_name) = "image_url"];

    message TMenuItemSample {
        option (NYT.default_field_flags) = SERIALIZATION_YT;

        string Url = 1 [json_name = "url", (NYT.column_name) = "url"];
        string Title = 2 [json_name = "title", (NYT.column_name) = "title"];
    }
    repeated TMenuItemSample MenuItems = 7 [json_name = "menu_items", (NYT.column_name) = "menu_items"];

    TStyleSample DarkStyle = 8 [json_name = "dark_style", (NYT.column_name) = "dark_style"];
    string AdBlockId = 9 [json_name = "ad_block_id", (NYT.column_name) = "ad_block_id"];
}

message TOpenUriDirectiveSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Name = 1 [json_name = "name", (NYT.column_name) = "name"];
    string Uri = 2 [json_name = "uri", (NYT.column_name) = "uri"];
    oneof OptionalScreenId {
        string ScreenId = 3 [json_name = "screen_id", (NYT.column_name) = "screen_id"];
    }
}

message TEndDialogSessionDirectiveSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Name = 1 [json_name = "name", (NYT.column_name) = "name"];
    string DialogId = 2 [json_name = "dialog_id", (NYT.column_name) = "dialog_id"];
}

message TTypeTextDirectiveSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Name = 1 [json_name = "name", (NYT.column_name) = "name"];
    string Text = 2 [json_name = "text", (NYT.column_name) = "text"];
}

message TStopBluetoothDirectiveSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Name = 1 [json_name = "name", (NYT.column_name) = "name"];
}

message TStartBluetoothDirectiveSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Name = 1 [json_name = "name", (NYT.column_name) = "name"];
}

message TReadPageDirectiveSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Name = 1 [json_name = "name", (NYT.column_name) = "name"];
}

message TReadPagePauseDirectiveSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Name = 1 [json_name = "name", (NYT.column_name) = "name"];
}

message TReadPageContinueDirectiveSample {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Name = 1 [json_name = "name", (NYT.column_name) = "name"];
}
